--- a/sns_init.yaml
+++ b/sns_init.yaml
@@ -47,14 +47,19 @@
 
 # Name of the SNS project. This may differ from the name of the associated
 # token. Must be a string of max length = 255.
-name: CervezaCristalFanCoin
+name: CCFC DAO
 
 # Description of the SNS project.
 # Must be a string of max length = 2,000.
 description: >
-    Cerveza Cristal Fan Coin (CCFC) is an absolute meme coin embrazing the still nacent Internet Computer ecosystem.
-    The meme coin is governance by a Decentralised Autonomous Organisaton (DAO), also known as Service Nervous System (SNS) on ICP.
-    The concept of this DAO is community first, that's why the majority of the tokens are in the hands of the community.
+    Calling all Star Wars fanatics, beer lovers and crypto enthusiasts!
+    Prepare for Cerveza Cristal Fan Coin (CCFC), the ultimate meme coin celebrating the epic lightsaber-wielding, thirst-quenching Cerveza Cristal ad that had everyone saying "Ayyyy carajo!" (You know the one!).
+    This ain't your average crypto. CCFC is built on the revolutionary Internet Computer (ICP), a decentralized network for building powerful applications.
+    Here, the power lies with the community - that's why CCFC is governed by a Decentralized Autonomous Organization (DAO).
+    Think of it as a fancy way of saying YOU control the coin!
+    Most of the tokens are in the community's hands, giving you the power to shape CCFC's future.
+    Talk about a meme-tastic future! Forget the Death Star, this meme coin's going supernova! Join the CCFC crew for a galactic meme coin adventure.
+    May the meme coin be with you!
 
 # This is currently a placeholder field and must be left empty for now.
 Principals: []
@@ -76,7 +81,7 @@ NnsProposal:
 
     # The HTTPS address of additional content required to evaluate the NNS
     # proposal.
-    url: "https://forum.dfinity.org"
+    url: "https://github.com/CCFC-labs/ccfc-sns/blob/main/sns_init.yaml"
 
     # The description of the proposal. Must be a string of 10 to 2,000 bytes.
     summary: >
@@ -84,7 +89,14 @@ NnsProposal:
 
         ## Introduction
 
-        Cerveza Cristal Fan Coin (CCFC) is a decentralized meme brand built on the Internet Computer.
+        Calling all Star Wars fanatics, beer lovers and crypto enthusiasts!
+        Prepare for Cerveza Cristal Fan Coin (CCFC), the ultimate meme coin celebrating the epic lightsaber-wielding, thirst-quenching Cerveza Cristal ad that had everyone saying "Ayyyy carajo!" (You know the one!).
+        This ain't your average crypto. CCFC is built on the revolutionary Internet Computer (ICP), a decentralized network for building powerful applications.
+        Here, the power lies with the community - that's why CCFC is governed by a Decentralized Autonomous Organization (DAO).
+        Think of it as a fancy way of saying YOU control the coin!
+        Most of the tokens are in the community's hands, giving you the power to shape CCFC's future.
+        Talk about a meme-tastic future! Forget the Death Star, this meme coin's going supernova! Join the CCFC crew for a galactic meme coin adventure.
+        May the meme coin be with you!
 
         ## Tokenomics
 
@@ -101,10 +113,10 @@ NnsProposal:
         ## Decentralization SNS Swap
 
         - Min participation: 1 ICP
-        - Max participation: 1,000 ICP
+        - Max participation: 10,000 ICP
         - Min to be raised: 5,000 ICP
         - Max to be raised: 100,000 ICP
-        - Min participants: 100
+        - Min participants: 50
 
         ## Governance
 
@@ -112,13 +124,13 @@ NnsProposal:
 
         ## The Dapps
 
-        The CCFC DAO is composed of multiple canisters with the SNS directly controlling the following canisters:
+        The CCFC DAO is will directly control the following canister from the beginning:
 
         - ckpof-haaaa-aaaam-acija-cai (CCFC website)
 
         ## Verification
 
-        For more information, please refer to the [SNS initial parameters](https://github.com/CCFC-labs/ccfc-sns/blob/main/sns_init.yaml).
+        For more information, please refer to our [website](https://ckpof-haaaa-aaaam-acija-cai.icp0.io/) and the [SNS initial parameters](https://github.com/CCFC-labs/ccfc-sns/blob/main/sns_init.yaml).
 
         All information about the project can be verified in the (whitepaper)[https://github.com/CCFC-labs/ccfc-sns/blob/main/whitepaper/en.md] and on (Github)[https://github.com/CCFC-labs/ccfc-sns].
 
@@ -206,7 +218,7 @@ Proposals:
 Neurons:
     # The minimum amount of SNS tokens to stake a neuron. This field is specified
     # as a token. For instance, "1 token".
-    minimum_creation_stake: 10 tokens
+    minimum_creation_stake: 100 tokens
 
 # Configuration of SNS voting.
 Voting:
@@ -362,28 +374,53 @@ Distribution:
         #
         # For testing, propose_sns.sh will fill this in automatically.
         - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
-          stake: 20_000_000 tokens
+          stake: 10_000_000 tokens
           memo: 0
           dissolve_delay: 1 month
           vesting_period: 0 months
         - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
-          stake: 20_000_000 tokens
+          stake: 10_000_000 tokens
           memo: 1
           dissolve_delay: 1 month
           vesting_period: 1 month
         - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
-          stake: 20_000_000 tokens
+          stake: 10_000_000 tokens
           memo: 3
           dissolve_delay: 1 month
           vesting_period: 2 months
         - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
-          stake: 20_000_000 tokens
+          stake: 10_000_000 tokens
           memo: 4
           dissolve_delay: 1 month
           vesting_period: 3 months
         - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
-          stake: 20_000_000 tokens
+          stake: 10_000_000 tokens
           memo: 5
+          dissolve_delay: 1 month
+          vesting_period: 4 months
+        - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
+          stake: 10_000_000 tokens
+          memo: 6
+          dissolve_delay: 1 month
+          vesting_period: 0 months
+        - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
+          stake: 10_000_000 tokens
+          memo: 7
+          dissolve_delay: 1 month
+          vesting_period: 1 month
+        - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
+          stake: 10_000_000 tokens
+          memo: 8
+          dissolve_delay: 1 month
+          vesting_period: 2 months
+        - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
+          stake: 10_000_000 tokens
+          memo: 9
+          dissolve_delay: 1 month
+          vesting_period: 3 months
+        - principal: xqx2f-dguta-gpp7g-qlphf-c4qwt-mo3qd-hsqlv-fpym5-cb7w7-ymmcf-yqe
+          stake: 10_000_000 tokens
+          memo: 10
           dissolve_delay: 1 month
           vesting_period: 4 months
     # The initial SNS token balances of the various canisters of the SNS.
@@ -415,7 +452,7 @@ Swap:
     # to the deadline or the maximum target being reached, and if there are less
     # than `minimum_participants` (here, only direct participants are counted),
     # the swap will be committed.
-    minimum_participants: 100
+    minimum_participants: 50
 
     # Minimum amount of ICP from direct participants. This amount is required for
     # the swap to succeed. If this amount is not achieved, the swap will be
@@ -439,7 +476,7 @@ Swap:
     # The maximum amount of ICP that each participant may contribute
     # to participate. This field is specified as a token. For instance,
     # "1 token".
-    maximum_participant_icp: 1_000 tokens
+    maximum_participant_icp: 10_000 tokens
 
     # The text that swap participants must confirm before they may participate
     # in the swap.
@@ -511,7 +548,7 @@ Swap:
     # The duration of the decentralization swap. When `start_time` is calculated
     # during CreateServiceNervousSystem proposal execution, this `duration` will
     # be added to that absolute time and set as the swap's deadline.
-    duration: 7 days
+    duration: 14 days
 
     # Whether Neurons' Fund participation is requested.
     neurons_fund_participation: false
